--- a/new.broccoli/BroccoliMvc/Views/Home/BroccoliOffer.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/BroccoliOffer.cshtml
@@ -28,12 +28,12 @@
     <div class="offer-discribe">
         <img style="height: 200px;" src="@Url.Content("~/Content/img/depositphotos_15565199-Lime-stack (1).jpg")"/>
         <div class="offer-title segoe-ui-light">Управление</div>
-        <div class="offer-text">Пошаговые инструкции для настройки советников  и торговой платформы помогут Вам без труда ориентироваться в управлении Вашими финансами.</div>
+        <div class="offer-text">Пошаговые инструкции для формирования Вашего инвестиционного портфеля помогут Вам без труда ориентироваться в управлении Вашими финансами.</div>
     </div>
     <div class="offer-discribe">
         <img style="height: 200px;margin-left: 60px;" src="@Url.Content("~/Content/img/depositphotos_1158059-Young-sunflower-sprout.jpg")"/>
         <div class="offer-title segoe-ui-light">Риск</div>
-        <div class="offer-text">Торгуйте при помощи наших советников с возможностью выставления риска.</div>
+        <div class="offer-text">Выбирайте сами, каким процентом от Вашего капитала Вы готовы рискнуть.</div>
     </div>
     <div class="hr-shadow calculator-container">
         <h4>Наращивайте капитал. Калькулятор</h4>
@@ -242,64 +242,8 @@
             </tbody>
         </table>
         <span class="button">
-            <a href="@Url.Action("RegisterForm", "Account")" target="_blank"><input id="regLink" class="large" type="button" value="Регистрация" /></a>
+            <a href="@Url.Action("RegisterForm", "Account")"><input id="regLink" class="large" type="button" value="Регистрация" /></a>
         </span>
-        <div id="pricing-table">
-            <div class="plan plan1">
-                <div class="price-header">Money +</div>
-                <div class="price">4,9% - 192,8%</div>  
-                <div class="monthly">В год</div>      
-                <ul>
-                    <li>Выставление риска <strong>Нет</strong></li>
-                    <li>Минимальный депозит<br/><strong>Нет требований</strong></li>
-                    <li>Рекомендуемый депозит<br/><strong>Нет рекомендаций</strong></li>
-                    <li><strong>ТФ-H1</strong></li>
-                    <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
-                </ul>
-                <a class="signup" href="@Url.Action("TradingSystemOrder", "PersonalCabinet", new { id = 1 })">Подробнее</a>         
-            </div >
-            <div class="plan plan2">
-                <div class="price-header two-line">Garanted Profit</div>
-                <div class="price">33,7% - 196,4%</div>
-                <div class="monthly">В год</div>  
-                <ul>
-                    <li>Выставление риска <strong>Есть</strong></li>
-                    <li>Минимальный депозит<br/><strong>100$</strong></li>
-                    <li>Рекомендуемый депозит<br/><strong>10.000$</strong></li>
-                    <li><strong>ТФ-М15</strong></li>
-                    <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD</strong></li>
-                </ul>
-                <a class="signup" href="@Url.Action("GarantedProfit", "Home")">Подробнее</a>            
-            </div>
-            <div class="plan plan3 popular-plan">
-                <div class="price-header">Max trade</div>
-                <div class="price">48,9% - 1008,5%</div>
-                <div class="monthly">В год</div>
-                <ul>
-                    <li>Выставление риска <strong>Есть</strong></li>
-                    <li>Минимальный депозит<br/><strong>1000$</strong></li>
-                    <li>Рекомендуемый депозит<br/><strong>10.000$</strong></li>
-                    <li><strong>ТФ-М15</strong></li>
-                    <li>Рекомендуемые<br/> валютные пары<br/><strong>EURUSD, GBPUSD, AUDUSD, USDCAD, USDCHF</strong></li>
-                </ul>
-                <a class="signup" href="@Url.Action("MaxTrade", "Home")">Подробнее</a>        
-            </div>	
-        </div>
-        <h3>Схема работы. Видео инструкция:</h3>
-            <div class="gal">
-                <a class="various fancybox.iframe" title="Шаг №1. Регистрация на Broccoli-Trade" href="http://www.youtube.com/embed/bivoKhBFAs0?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/1.jpg")"></a>
-                <a class="various fancybox.iframe" title="Шаг №2. Открытие счета на ForexInn" href="http://www.youtube.com/embed/G956oyXPvTw?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/2.jpg")"></a>
-                <a class="various fancybox.iframe" title="Шаг №3. Активация счета на Broccoli-Trade" href="http://www.youtube.com/embed/9vaRA195G-o?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/3.jpg")"></a>
-                <a class="various fancybox.iframe" title="Шан №4. Заказ советника для торгового счета" href="http://www.youtube.com/embed/_KAU61fomhs?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/4.jpg")"></a>
-                <a class="various fancybox.iframe" title="Шаг №5. Установка терминала MetaTrader" href="http://www.youtube.com/embed/y0s_AXZlXQg?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/5.jpg")"></a>
-                <a class="various fancybox.iframe" title="Шаг №6. Установка и запуск советника" href="http://www.youtube.com/embed/v4i2j1WcsNo?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/6.jpg")"></a>
-                <a class="various fancybox.iframe" title="Шаг №7. Открытие демо-счета" href="http://www.youtube.com/embed/StVH_JTqi7k?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/7.jpg")"></a>
-                <a class="various fancybox.iframe" title="Шаг №8. Заказ советника для демо-счета" href="http://www.youtube.com/embed/xy-VBXeMW-w?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/8.jpg")"></a>
-                <a class="various fancybox.iframe" title="Шаг №9. Заказ и использование VPS сервера" href="http://www.youtube.com/embed/J75OLtizYag?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/10.jpg")"></a>
-            </div>
-            <span class="button">
-                <a href="@Url.Action("RegisterForm", "Account")" target="_blank"><input id="regLink" class="large" type="button" value="Регистрация" /></a>
-            </span>
     </div>
 </div>
 <script type="text/javascript" src="@Url.Content("~/Scripts/Main/broccoli.offer.js")"></script>
