--- a/new.broccoli/BroccoliMvc/Views/Shared/Footer.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Shared/Footer.cshtml
@@ -6,7 +6,7 @@
         <li><a href="@Url.Action("ContactUs", "Home")">Свяжитесь с Нами</a></li>
     </ul>
     <p class="footer-text">
-        Брокколи трэйд — это сайт, где Вы можете получить советники форекс бесплатно, инструменты инвестиций, позволяющие заработать на форекс сразу. Как начать торговать на форекс не имея опыта — брокколи трэйд — лучшее решение. Здоровые инвестиции.
+        Брокколи трэйд — это сайт, где Вы можете сформировать свой инвестиционный портфель бесплатно, получать новые инструменты инвестиций, позволяющие заработать сразу — брокколи трэйд — лучшее решение. Здоровые инвестиции.
     </p>
     <p class="copyright">2012 - @DateTime.Now.Year Broccoli-Trade.</p>
     <a class="partner-link" href="@Url.Action("Partners", "Home")">Партнерская программа</a>
