--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -93,7 +93,7 @@
             <p class="about-forex-text">А может быть Вы уже пробовали инвестировать и получили 20% за год вместо 120% ожидаемых? Инвестировали в форекс и терпели убытки? Это хорошо! Вы не одни! Мы тоже сталкивались с такими проблемами.<br />Вы не виноваты, к нам присылают много примеров, да Вы и сами могли сталкиваться с ними на форумах.</p>
             <div class="comment" style="width: 480px;">
                 <strong>Владимир Зотов</strong><br /><br />
-                <p>Инвестировал в структурный продукт компании Альпари, прошло 4 месяца, продукт показал на графике 64%, когда я вкладывался было 39%, по факту на руки я получил ту же сумму с приростом 0.54% за вычетом всех комиссий.</p>
+                <p>Инвестировал в структурный продукт компании ******, прошло 4 месяца, продукт показал на графике 64%, когда я вкладывался было 39%, по факту на руки я получил ту же сумму с приростом 0.54% за вычетом всех комиссий.</p>
             </div>
             <div class="success-trader-container">
                 <h4>Но есть и успешные инвесторы</h4>
